--- a/hyc_inference/inference/config/Stage1_CAVP.yaml
+++ b/hyc_inference/inference/config/Stage1_CAVP.yaml
@@ -1,6 +1,6 @@
 
 model:
-  target: diff_foley_inference.inference.model.cavp_model.CAVP_Inference
+  target: hyc_inference.inference.model.cavp_model.CAVP_Inference
   params:
     video_encode: Slowonly_pool
     spec_encode: cnn14_pool
